test_suite/ui/multiple_bits.stderr
error: Flags must have exactly one set bit
 --> ui/multiple_bits.rs:9:5
  |
9 |     MultipleBits = 6,
  |     ^^^^^^^^^^^^^^^^
